--- a/index.html
+++ b/index.html
@@ -388,6 +388,8 @@
         <div class="footer">
             <p>📞 কল-ভিত্তিক AI সহায়ক • ক্রমাগত কথোপকথন</p>
             <p style="margin-top: 5px;">Space চেপে কল শুরু করুন • Escape চেপে কল শেষ করুন</p>
+            <p style="margin-top: 5px;">This is a demo version of AI Voice Banking Assistant developed by Dipesh Shome</p>
+
         </div>
     </div>
 
