--- a/index.html
+++ b/index.html
@@ -388,7 +388,12 @@
         <div class="footer">
             <p>📞 কল-ভিত্তিক AI সহায়ক • ক্রমাগত কথোপকথন</p>
             <p style="margin-top: 5px;">Space চেপে কল শুরু করুন • Escape চেপে কল শেষ করুন</p>
-            <p style="margin-top: 5px;">This is a demo version of AI Voice Banking Assistant developed by Dipesh Shome</p>
+            <p style="margin-top: 5px;">
+                Experience the future of banking with this AI Voice Assistant demo by: 
+                <a href="https://www.linkedin.com/in/dipesh-shome-575854113/" target="_blank" style="color: #0077b5; font-weight: 500;">
+                  Dipesh Shome
+                </a>
+              </p>
 
         </div>
     </div>
